--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,81 @@
+# Arquivos de dados
 /PRODUTIVIDADE EQUIPAMENTOS.xlsx
 /~$PRODUTIVIDADE EQUIPAMENTOS.xlsx
+backend/planilha.xlsx
+backend/*.xlsx
+backend/data/
+*.xlsx
+*.xls
+
+# Dependências
 node_modules/
 dist/
-.env
-*.log
-*.sqlite
+venv/
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Arquivos de ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Banco de dados
+*.sqlite
+*.db
+*.sqlite3
+
+# Arquivos temporários
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Build
+build/
+out/
+.next/
+.nuxt/
+.cache/
+
+# Docker
+.dockerignore
+
+# Backup
+backups/
+*.tar.gz
+*.tar
+
+# SSL
+*.pem
+*.key
+*.crt
+
+# Arquivos de sistema
+*.tmp
+*.temp
 
