--- a/backend/config.json
+++ b/backend/config.json
@@ -1,8 +1,8 @@
 {
   "importType": "network",
-  "filePath": "\\\\192.168.1.8\\public\\ARRUDA GERAL\\Arruda Transporte de Lenha\\APONTAMENTOS\\PRODUÇÃO E EFICIÊNCIA\\PRODUTIVIDADE EQUIPAMENTOS.xlsx",
+  "filePath": "\\\\192.168.1.8\\ARRUDA GERAL\\Arruda Transporte de Lenha\\APONTAMENTOS\\PRODUÇÃO E EFICIÊNCIA\\PRODUTIVIDADE EQUIPAMENTOS.xlsx",
   "username": "software",
-  "password": "gAAAAABoYvcPEAxpAfhU1NgpZ17ZJwXhYDL_-01FQUDjPJMm24EENFi_oZBC2Vd-_MoGwEc5sJNdkYtdOmiI3r-lWNNY_BvyKQ==",
+  "password": "gAAAAABokmD0Jq6M3_PvxpVo58GUDA4MB81SFH24eFwSlsoYCAex3QZ8MRS2oxVmdmL_6xwD_C2nvOEtWzV_nW1-Xcp1NxteDA==",
   "autoImport": true,
   "importHour": "11",
   "importMinute": "00",
