--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,91 +1,65 @@
 version: '3.8'
 
 services:
-  # Backend API
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    environment:
+      - NODE_ENV=development
+      - VITE_API_URL=http://localhost:8000
+    depends_on:
+      - backend
+
   backend:
-    build: ./backend
-    container_name: fleet-care-backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend:/app
+      - ./PRODUTIVIDADE EQUIPAMENTOS.xlsx:/app/planilha.xlsx
     ports:
       - "8000:8000"
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
-    volumes:
-      - ./backend:/app
-      - ./data:/app/data
-      - .:/workspace
-    restart: unless-stopped
-    networks:
-      - fleet-care-network
-
-  # Frontend React (Development)
-  frontend:
-    build: 
-      context: ./frontend
-      dockerfile: Dockerfile.dev
-    container_name: fleet-care-frontend
-    ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:8000
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     depends_on:
-      - backend
-    restart: unless-stopped
-    networks:
-      - fleet-care-network
+      - db
+      - redis
 
-  # Banco de dados PostgreSQL (opcional)
-  postgres:
-    image: postgres:15-alpine
-    container_name: fleet-care-db
-    environment:
-      - POSTGRES_DB=fleet_care
-      - POSTGRES_USER=fleet_user
-      - POSTGRES_PASSWORD=fleet_password
+  nginx:
+    image: nginx:alpine
     ports:
-      - "5432:5432"
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+
+  db:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_DB=fleetcare
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    networks:
-      - fleet-care-network
+    ports:
+      - "5432:5432"
 
-  # Redis para cache (opcional)
   redis:
-    image: redis:7-alpine
-    container_name: fleet-care-redis
+    image: redis:alpine
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    restart: unless-stopped
-    networks:
-      - fleet-care-network
-
-  # Nginx como proxy reverso (opcional)
-  nginx:
-    image: nginx:alpine
-    container_name: fleet-care-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl
-    depends_on:
-      - backend
-      - frontend
-    restart: unless-stopped
-    networks:
-      - fleet-care-network
 
 volumes:
   postgres_data:
   redis_data:
-
-networks:
-  fleet-care-network:
-    driver: bridge
