--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,10 +3,10 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package files
-COPY package.json package-lock.json ./
+COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 # Copy source code
 COPY . .
@@ -14,5 +14,5 @@ COPY . .
 # Expose Vite dev server port
 EXPOSE 5173
 
-# Start development server
+# Start development server with host flag
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"] 
