--- a/nginx.conf
+++ b/nginx.conf
@@ -44,26 +44,10 @@ http {
         server frontend:5173;
     }
 
-    # HTTP server (redirect to HTTPS)
+    # HTTP server
     server {
         listen 80;
         server_name localhost;
-        
-        # Redirect all HTTP traffic to HTTPS
-        return 301 https://$server_name$request_uri;
-    }
-
-    # HTTPS server
-    server {
-        listen 443 ssl http2;
-        server_name localhost;
-
-        # SSL configuration (self-signed for development)
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
