--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,15 @@
-# Build stage
-FROM node:18-alpine as build
-
+FROM node:18-bullseye as build
 WORKDIR /app
-
-# Copy package files
-COPY package.json ./
-
-# Install dependencies with cache clearing
-RUN npm cache clean --force && \
-    npm install --no-optional --no-audit --no-fund
-
-# Copy source code
+COPY package*.json ./
+RUN npm ci
+# injeta a URL da API na build do Vite
+ARG API_BASE
+ENV VITE_API_BASE_URL=${API_BASE}
 COPY . .
-
-# Build the app
 RUN npm run build
 
-# Production stage
 FROM nginx:alpine
-
-# Copy built app
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx config
+COPY --from=build /app/dist/ /usr/share/nginx/html/
 COPY nginx.conf /etc/nginx/nginx.conf
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"] 
